# battlesnake_alphazero

./: .gitignore  Cargo.toml  README.MD
benches/: benchmark.rs
fixtures/: start_of_game.json
src/: alpha_zero_model.rs  arena.rs  canonical_board.rs  coach.rs  config.rs  examples_handler.rs  game.rs  lib.rs  main.rs  mcts.rs  neural_network.rs  normal_mcts.rs  utils.rs
