cargo-features = ["profile-rustflags"]
[package]
name = "battlesnake_alphazero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
battlesnake-game-types = "0.17.0"
itertools = "0.12.1"
criterion = "0.5.1"
clap= { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
tch = "0.15.0"
bincode = "1.3.3"
indicatif = "0.17.8"
ndarray = "0.15.6"
rayon = "1.9.0"
rand_distr="0.4.3"

[[bench]]
name = "benchmark"
harness = false


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]
panic = "abort"
